--- a/views/update.html
+++ b/views/update.html
@@ -27,7 +27,8 @@
               echo "<label for='address'>".$address->name_address."</label><br>"; }
     ?> <br><br><br>
         <?php 
-         echo  "<a href='edite?id='".$_GET['id']."><input type='submit' value='Edite'></a>" ;
+
+         echo  "<input type='submit' value='Edite'><a href='edite?id=".$_GET['id']."'></a>" ;
          ?>
         <br> <br>
         <a href="/Darrebni/ProjectFamily/">go back Home</a>
